Progress on senator wear views

--- a/App/Represent/mobile/src/main/res/values/strings.xml
+++ b/App/Represent/mobile/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="barb_tweet">Republicans want an elected president to make this appointment. Good news: we have a TWICE-elected @POTUS ready to do just that.</string>
 </resources>
