Working phone to watch communication

--- a/App/Represent/mobile/src/main/res/values/strings.xml
+++ b/App/Represent/mobile/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="barb_tweet">Republicans want an elected president to make this appointment. Good news: we have a TWICE-elected @POTUS ready to do just that.</string>
+    <string name="dianne_tweet">The federal government needs authority to aggressively pursue transnational criminal organizations to reduce flow of drugs into our country.</string>
+    <string name="angus_tweet">We must do all that we can to learn from Garrett Brown’s tragic story: http://bit.ly/1TSnjrG </string>
+    <string name="susan_tweet">Sen.Collins met w/ @saypotato members this morning to discuss ME’s potato industry #mepolitics #eatMainepotatoes</string>
+    <string name="lisa_tweet">Feeling gratitude and not expressing it is like having a gift and not opening it. Happy Thanksgiving!</string>
+    <string name="lee_tweet">The Texas law has nothing to do with protecting womens’ health and everything to do with restricting women’s rights #StopTheSham #TellUSAToday</string>
 </resources>
