--- a/App/Represent/mobile/src/main/res/values/strings.xml
+++ b/App/Represent/mobile/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="susan_tweet">Sen.Collins met w/ @saypotato members this morning to discuss ME’s potato industry #mepolitics #eatMainepotatoes</string>
     <string name="lisa_tweet">Feeling gratitude and not expressing it is like having a gift and not opening it. Happy Thanksgiving!</string>
     <string name="lee_tweet">The Texas law has nothing to do with protecting womens’ health and everything to do with restricting women’s rights #StopTheSham #TellUSAToday</string>
+    <string name="mike_tweet">In #HASC Strategic Forces subcommittee hearing on the U.S. Strategic Forces Posture. Watch live here: http://bit.ly/1QF4JUS </string>
+    <string name="jeff_tweet">SUBCOMMITTEE CHART: Almost 97% Arrested Illegal Immigrant Juveniles Allowed To Stay In U.S.: http://1.usa.gov/1WLTk48  </string>
+    <string name="richard_tweet">It's completely unacceptable that DOJ has failed in its duty to defend the U.S. Election Assistance Commission</string>
     <string name="title_activity_senator_details">SenatorDetailsActivity</string>
     <string-array name="bills_array">
         <item>2/23/16 - S. 2568: California Desert Conservation, Off-Road Recreation, and Renewable Energy Act</item>
